--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,24 +10,24 @@ espressoCore = "3.6.1"
 
 activityCompose = "1.9.3"
 composeBom = "2024.11.00"
-appcompat = "1.6.0"
+appcompat = "1.7.0"
 material = "1.12.0"
 material3 = "1.3.1"
 jetbrainsKotlinJvm = "2.0.0"
 
 #Additional
-#androidx-macro-benchmark = "1.2.2"
-#my-library = "1.4"
+emoji2 = "1.5.0"
 androidTools = "31.7.2"
 core = "1.10.3"
-#playCore = "1.10.3"
+
 playAssetDelivery = "2.2.2"
 playFeatureDelivery = "2.1.0"
 playInAppReview = "2.0.2"
 playInAppUpdate = "2.1.0"
 coreSplashscreen = "1.0.1"
 coilCompose = "2.7.0"
-composeCompiler = "1.5.9"
+
+composeRuntime ="1.7.5"
 desugar_jdk_libs = "2.1.3"
 ktor = "2.3.8"
 ktorClientLogging = "2.3.8"
@@ -39,7 +39,6 @@ securityCryptoKtx = "1.1.0-alpha06"
 timber = "5.0.1"
 ksp = "2.0.0-1.0.22"
 room = "2.6.1"
-org-jetbrains-kotlin-jvm = "1.9.22"
 maps = "4.3.3"
 coroutines = "1.9.0"
 gmsLocation = "21.3.0"
@@ -50,6 +49,12 @@ kotlinx-serialization = "1.6.3"
 secretsPlugin = "2.0.1"
 playServicesMaps = "19.0.0"
 annotation = "1.9.1"
+
+#androidx-macro-benchmark = "1.2.2"
+#my-library = "1.4"
+#playCore = "1.10.3"
+#composeCompiler = "1.5.15"
+#org-jetbrains-kotlin-jvm = "1.9.22"
 
 # Project versions
 projectApplicationId = "com.febin.runiquee"
@@ -74,7 +79,8 @@ androidx-activity-compose = { group = "androidx.activity", name = "activity-comp
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 
-androidx-ui = { group = "androidx.compose.ui", name = "ui" }
+
+
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
@@ -90,11 +96,10 @@ androidx-material-icons-extended = { module = "androidx.compose.material:materia
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-security-crypto-ktx = { module = "androidx.security:security-crypto-ktx", version.ref = "securityCryptoKtx" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
-#androidx-benchmark-macro = { group = "androidx.benchmark", name = "benchmark-macro-junit4", version.ref = "androidx-macro-benchmark" }
-#my-library = { group = "com.myapplication", name = "mylibrary", version.ref = "my-library" }
 
-#core = { module = "com.google.android.play:core", version.ref = "playCore" }
-#core-testing = { module = "com.google.android.play:core-testing", version.ref = "playCore" }
+emoji2 = { group = "androidx.emoji2", name = "emoji2", version.ref = "emoji2" }
+emoji2-views = { group = "androidx.emoji2", name = "emoji2-views", version.ref = "emoji2" }
+compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "composeRuntime" }
 
 play-asset-delivery = { module = "com.google.android.play:asset-delivery", version.ref = "playAssetDelivery" }
 play-asset-delivery-ktx = { module = "com.google.android.play:asset-delivery-ktx", version.ref = "playAssetDelivery" }
@@ -111,6 +116,7 @@ kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-c
 kotlinx-coroutines-play-services = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "coroutines"}
 desugar-jdk-libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
 androidx-work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
+
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
@@ -151,24 +157,33 @@ kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-pl
 ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 room-gradlePlugin = { group = "androidx.room", name = "room-gradle-plugin", version.ref = "room" }
 
+#androidx-ui = { module = "androidx.compose.ui:ui", version.ref = "composeBom" }
+#androidx-composeMaterial = { module = "androidx.compose.material:material", version.ref = "composeBom" }
+#androidx-benchmark-macro = { group = "androidx.benchmark", name = "benchmark-macro-junit4", version.ref = "androidx-macro-benchmark" }
+#my-library = { group = "com.myapplication", name = "mylibrary", version.ref = "my-library" }
+#core = { module = "com.google.android.play:core", version.ref = "playCore" }
+#core-testing = { module = "com.google.android.play:core-testing", version.ref = "playCore" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-#kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
 android-library = { id = "com.android.library", version.ref = "agp" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 
 #Additional
-#jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-#org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "org-jetbrains-kotlin-jvm" }
+
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 room = { id = "androidx.room", version.ref = "room" }
 androidDynamicFeature = { id = "com.android.dynamic-feature", version.ref = "agp" }
 mapsplatform-secrets-plugin = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secretsPlugin"}
 
+#jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+#org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "org-jetbrains-kotlin-jvm" }
+#kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+
+#Convention Plugins
 runiquee-android-application = { id = "runiquee.android.application", version = "unspecified" }
 runiquee-android-application-compose = { id = "runiquee.android.application.compose", version = "unspecified" }
 runiquee-android-library = { id = "runiquee.android.library", version = "unspecified" }
@@ -187,6 +202,7 @@ compose = [
     "androidx-compose-ui",
     "androidx-compose-ui-graphics",
     "androidx-compose-ui-tooling-preview",
+
 ]
 compose-debug = [
     "androidx-compose-ui-tooling",
